fixed contact button align

--- a/css/main.css
+++ b/css/main.css
@@ -163,7 +163,7 @@ table, th, td {
 
 .contact-group {
 	margin: 0 auto;
-	width: 470px;
+	width: 300px;
 }
 
 .contact-group button {
